--- a/test/fixtures/teachers.yml
+++ b/test/fixtures/teachers.yml
@@ -1,17 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user_name: MyString
-  password_digest: MyString
-  last_login: 2017-05-10 22:01:20
-  full_name: MyString
-  screen_name: MyString
-  icon: MyString
-  color: MyString
-  email: MyString
-  description: MyText
-  powers: MyString
-  school_id: 1
+  user_name: profbill,
+  password_digest: password,
+  last_login: 2017-05-10 22:01:20,
+  full_name: Professor Bill,
+  screen_name: profbill,
+  icon: apple,
+  color: red,
+  email: wtktriger@noctrl.edu,
+  description: Super user,
+  powers: Admin,
+  school_id: 0
 
 two:
   user_name: MyString
@@ -21,7 +21,7 @@ two:
   screen_name: MyString
   icon: MyString
   color: MyString
-  email: MyString
+  email: MyString2@mystring.com
   description: MyText
   powers: MyString
   school_id: 1
