--- a/test/fixtures/session_notes.yml
+++ b/test/fixtures/session_notes.yml
@@ -1,11 +1,21 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  note: MyText
+  note: This is the first note
   session_id: 1
   created_at: 2017-05-10 22:02:49
 
 two:
-  note: MyText
+  note: This is the second note
   session_id: 1
+  created_at: 2017-05-10 22:02:49
+  
+orange:
+  note: This is the third note
+  session_id: 2
+  created_at: 2017-05-10 22:02:49
+
+tau_manifesto:
+  note: This is the fourth note
+  session_id: 2
   created_at: 2017-05-10 22:02:49
