Reimplement password and password_confirmation in new teacher

--- a/test/fixtures/teachers.yml
+++ b/test/fixtures/teachers.yml
@@ -15,7 +15,7 @@ one:
 
 two:
   user_name: MyString
-  password_digest: MyString
+  password_digest: password,
   last_login: 2017-05-10 22:01:20
   full_name: MyString
   screen_name: MyString
