added fixes to get all tests running green

--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -9,6 +9,7 @@ one:
   description: MyText
   session_interval: 1
   school_id: 1
+  id: 1 #DJ added, is necessary to include id fields to fix tests
 
 two:
   full_name: MyString
@@ -19,3 +20,4 @@ two:
   description: MyText
   session_interval: 1
   school_id: 1
+  id: 2 #DJ added, is necessary to include id fields to fix tests
