--- a/test/fixtures/teachers.yml
+++ b/test/fixtures/teachers.yml
@@ -12,6 +12,7 @@ one:
   description: Super user
   powers: Admin
   school_id: 0
+  id: 1 #DJ added, is necessary to include id fields to fix tests
 
 two:
   user_name: Joe8
@@ -25,3 +26,5 @@ two:
   description: MyText
   powers: Admin
   school_id: 1
+  id: 2 #DJ added, is necessary to include id fields to fix tests
+
