--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@
 .byebug_history
 
 #ignore routes and login check
-/config/routes.rb
-/app/controllers/application_controller.rb
+#/config/routes.rb
+#/app/controllers/application_controller.rb
