--- a/test/fixtures/schools.yml
+++ b/test/fixtures/schools.yml
@@ -8,6 +8,7 @@ one:
   email: MyString
   website: MyString
   description: MyString
+  id: 1 #Changed By: Michael Lotien, school ID needs to be defined in test
 
 two:
   full_name: MyString
@@ -17,3 +18,4 @@ two:
   email: MyString
   website: MyString
   description: MyString
+  id: 2 #Changed By: Michael Lotien, school ID needs to be defined in test
